# ArgriLocal-backend

./: README.md  manage.py  pyproject.toml  requirements.txt
argri_local/: asgi.py  settings.py  urls.py  wsgi.py
config/: settings.py  urls.py
products/: models.py  serializers.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_initial.py  0003_remove_product_producer.py  0004_remove_product_location.py  0005_rename_imageurl_product_image_url.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_name.py  0002_user_name_alter_user_address_alter_user_first_name_and_more.py
